# rnd-agent

./: .env.dev.example  .env.example  .env.production.example  .env.staging.example  .gitignore  Dockerfile  Makefile  README.md  alembic.ini  docker-compose.override.yml  docker-compose.prod.yml  docker-compose.yml  pyproject.toml
config/: settings.py  sources.development.yaml  sources.production.yaml  sources.yaml
docker/postgres-init/: 01-enable-pgvector.sql
metabase/: README.md
scripts/: backfill.py  run_source.py  seed_sources.py
src/launch_intel/api/: main.py
src/launch_intel/db/: engine.py  repository.py  tables.py
src/launch_intel/dedup/: embeddings.py  matcher.py  resolver.py
src/launch_intel/extract/: __init__.py  extractor.py  normalize.py  prompts.py
src/launch_intel/feedback/: handler.py  labels.py
src/launch_intel/metrics/: lead_time.py
src/launch_intel/models/: __init__.py  evidence.py  launch.py  page.py  source.py
src/launch_intel/notify/: digest.py  router.py  slack.py  templates.py
src/launch_intel/pipeline/: flows.py  tasks.py
src/launch_intel/watch/: __init__.py  base.py  change_detector.py  fetcher.py
tests/fixtures/: generic_developer_listing.html
tests/fixtures/live/: nawy_compound_2458_perla.html  nawy_enriched.json  (+5 more)
tests/test_adapters/: test_generic_developer_site.py
tests/test_config/: test_settings.py
tests/test_dedup/: README.md
tests/test_extract/: test_extractor.py
tests/test_models/: test_contract.py
tests/test_pipeline/: test_tasks.py
tests/test_watch/: test_change_detector.py  test_fetcher.py
(+13 files in other folders)
