[project]
name = "launch-intel"
version = "0.1.0"
description = "Competitive launch intelligence pipeline for The Address Investments"
requires-python = ">=3.11"
dependencies = [
    "pydantic>=2.7",
    "pydantic-settings>=2.3",
    "prefect>=2.19",
    "instructor>=1.3",
    "openai>=1.30",
    "playwright>=1.44",
    "httpx>=0.27",
    "tenacity>=8.3",
    "pyyaml>=6.0",
    "beautifulsoup4>=4.12",
    "sqlalchemy>=2.0",
    "psycopg[binary]>=3.1",
    "pgvector>=0.2",
    "alembic>=1.13",
    "rapidfuzz>=3.9",
    "celery>=5.4",
    "redis>=5.0",
    "slack-sdk>=3.27",
    "fastapi>=0.111",
    "uvicorn[standard]>=0.30",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.2",
    "pytest-asyncio>=0.23",
    "pytest-httpx>=0.30",
    "ruff>=0.4",
]

[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
pythonpath = [".", "src"]
asyncio_mode = "auto"

[tool.ruff]
line-length = 100
target-version = "py311"
